# Serenity-QA

./: .env.example  .gitignore  README.md  Serenity.py  agentlog.md  pyproject.toml  requirements.txt
src/serenity/: __init__.py  __main__.py  cli.py  config.py  constants.py  exceptions.py  types.py
src/serenity/advanced/: __init__.py  behavioral.py  cache_audit.py  chaos.py  i18n.py  memory_leak.py  network_analysis.py  race_condition.py  websocket_sse.py
src/serenity/ai/: __init__.py  gemini_client.py  suggestion_engine.py  test_generator.py  ux_judge.py
src/serenity/analyzers/: __init__.py  accessibility.py  base.py  click_agent.py  content.py  forms.py  functionality.py  infrastructure.py  performance.py  responsiveness.py  seo.py
src/serenity/core/: __init__.py  browser_pool.py  cdp_manager.py  crawler.py  engine.py  event_bus.py  state.py
src/serenity/dashboard/: __init__.py  messages.py  server.py  ws_manager.py
src/serenity/dashboard/static/: index.html
src/serenity/dashboard/static/css/: dashboard.css
src/serenity/dashboard/static/js/: app.js
src/serenity/reporting/: __init__.py  html_report.py  json_report.py  nav_graph.py  pdf_report.py  prompt_recall.py  screenshots.py
src/serenity/scoring/: __init__.py  engine.py  finding.py  rules.py
src/serenity/utils/: __init__.py  bezier.py  dom_diff.py  network.py  sanitize.py  screenshot.py  selectors.py  text.py  timing.py
