[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serenity-qa"
version = "0.1.0"
description = "Serenity QA — Advanced Web Quality Assurance Agent"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Serenity QA Team"},
]
keywords = ["qa", "testing", "web", "automation", "playwright", "seo", "accessibility", "performance"]

dependencies = [
    "playwright>=1.50",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "rich>=13.9",
    "jinja2>=3.1",
    "weasyprint>=62",
    "pydantic>=2.9",
    "pillow>=11",
    "google-generativeai>=0.8",
    "python-dotenv>=1.0",
    "certifi>=2024",
    "cryptography>=43",
    "websockets>=13",
]

[project.optional-dependencies]
supabase = ["supabase>=2"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "ruff>=0.7",
    "mypy>=1.12",
]

[project.scripts]
serenity = "serenity.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/serenity"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
